@@ -1,9 +1,9 @@
 Package: NNbenchmark
 Title: A Package to Benchmark Neural Network Packages
-Description: Datasets and functions to benchmark neural network functions and training algorithms (convergence, speed, ease of use) in 70 R packages.
+Description: Datasets and functions to benchmark neural network functions and training algorithms (convergence, speed, ease of use) in 69 R packages.
 Imports: R6, pkgload
 Suggests: brnn, validann
-Version: 2.0
+Version: 2.0.1
 Date: 2019-08-04
 License: GPL-2
 Maintainer: Patrice Kiener <fattailsr@inmodelia.com>
