@@ -2,26 +2,40 @@
 % Please edit documentation in R/timer_function.R
 \name{createTimer}
 \alias{createTimer}
-\title{Create a timer object}
+\alias{getTimer}
+\title{Create a timer object. Get the data frame of a timer object}
 \usage{
-createTimer(verbose = T)
+createTimer(verbose = TRUE)
+
+getTimer(object)
 }
 \arguments{
 \item{verbose}{A parameter to control whether to print messages while using
 methods. Default to \code{TRUE}.}
-}
-\value{
-a timer object.
+
+\item{object}{The name for timer object.}
 }
 \description{
-Create a timer object
+\code{createTimer} creates a timer object.
+
+\code{getTimer} returns a data frame with all records saved by the timer 
+object. Columns in the data.frame are: event, start, end, duration, RMSE, 
+MAE, stars, params, comment.
 }
 \examples{
-## Create, start and stop timing for event 1 (comment is optional)
-## Get all records in a data frame
-timer1 <- createTimer()      # print is enabled
-timer1 <- createTimer(FALSE) # print is disabled
-timer1$start("event1")
-timer1$stop("event1", RMSE = 1, comment = "event 1 stopped") 
-getTimer(timer1)
+## Create a timer object. Record events. Get all records.
+timeTT <- createTimer(FALSE) # print is disabled
+timeTT <- createTimer()      # print is enabled
+timeTT$start("event1")
+Sys.sleep(1)
+timeTT$stop("event1", RMSE = 1, MAE = 1.3, stars = "*", 
+            params = "maxiter=100, lr=0.01", comment = "OK for 1",  
+            printmsg = TRUE)
+timeTT$start("event2")
+Sys.sleep(2)
+timeTT$stop("event2", RMSE = 2, MAE = 2.6, stars = "**",  
+            params = "maxiter=1000, lr=0.001", comment = "OK for 2",  
+            printmsg = FALSE)
+getTimer(timeTT)
+
 }
